[gd_scene load_steps=5 format=3 uid="uid://cwyh4am00woof"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_f4gd3"]
[ext_resource type="PackedScene" uid="uid://dxenboy3i1eof" path="res://prefabs/player.tscn" id="1_j13qy"]
[ext_resource type="Theme" uid="uid://dehcusfghu2bk" path="res://new_theme.tres" id="3_rcqmk"]
[ext_resource type="PackedScene" uid="uid://b17sbjuj45l17" path="res://prefabs/enemy_laser.tscn" id="4_lk8hh"]

[node name="game" type="Node2D"]
script = ExtResource("1_f4gd3")

[node name="player" parent="." instance=ExtResource("1_j13qy")]
position = Vector2(175, 310)

[node name="enemy_timer" type="Timer" parent="."]
autostart = true

[node name="game_ui" type="Control" parent="."]
custom_minimum_size = Vector2(1152, 100)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_rcqmk")

[node name="score_label" type="Label" parent="game_ui"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 36.0
grow_horizontal = 2
text = "SCORE : 0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="enemy_laser" parent="." instance=ExtResource("4_lk8hh")]
position = Vector2(976, 306)

[node name="restart_timer" type="Timer" parent="."]

[connection signal="player_killed" from="player" to="." method="_on_player_player_killed"]
[connection signal="timeout" from="enemy_timer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="restart_timer" to="." method="_on_restart_timer_timeout"]
